update definition notes

--- a/gap_page/www/stylesheet.css
+++ b/gap_page/www/stylesheet.css
@@ -24,7 +24,7 @@ a, a:hover, a:visited {
 
 .vis-text .hidden-text {
   visibility: hidden;
-  width: 120px;
+  min-width: 120px;
   background-color: white;
   text-align: left;
   border-radius: 6px;
@@ -45,7 +45,7 @@ a, a:hover, a:visited {
 
 .hidden-text {
   padding: 5px;
-  width: 120px;
+  min-width: 120px;
 }
 
 .vis-text {
